[package]
name = "sapp-console-log"
description = "A logging facility for in-browser `sapp-wasm`-based games/apps"
version = "0.1.9"
authors = ["Duane Johnson <duane.johnson@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
sapp-wasm = { path = "/Users/duane/tmp/miniquad/native/sapp-wasm", version = "0.1.*" }

